# Game_of_life

./: CMakeLists.txt  README.md
src/: test_task.cpp
